[package]
name = "wormhole-query-sdk"
description = "Parsing functions for Wormhole Queries"
version = "0.0.1"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/wormholelabs-xyz/wormhole-query-sdk-rust"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1.5.0"
